[package]
name = "sdfk_bot"
version = "0.1.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity_framework = { git = "https://github.com/serenity-rs/framework" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default_features = false
features = ["client", "model", "gateway", "cache", "rustls_backend"]
